# darwin-sre

./: .env.example  .gitignore  .mcp.json  Dockerfile  PLAN.md  config.py  main.py  observability.py  pyproject.toml  requirements.txt
.do/: app.yaml
agents/: judge.py  sre_agent.py
api/: app.py  routes.py
darwin/: arize_client.py  degradation.py  loop.py  mutator.py  retrieval.py  skills.py  storage.py  vijil_dome.py  vijil_genome.py
data/: generate_incidents.py  generate_logs.py  incidents_production.json  incidents_training.json  knowledge_base.json  logs.json
docs/: 00_project_map.md  01_problem_and_vision.md  02_data_architecture.md  03_agent_pipeline.md  04_darwin_loop.md  05_platform.md  06_skill_usage_escalation.md  future_gepa.md  vijil_integration.md
frontend/: app.js  index.html  style.css
scripts/: setup_arize.py  setup_atlas_vector.py
tests/: conftest.py  test_api.py  test_data.py  test_degradation.py  test_frontend_smoke.py  test_health.py  test_rag.py  test_retrieval.py  test_selfheal.py  test_storage.py
