[tool.poetry]
name = "darwin-sre"
version = "0.1.0"
description = "AI SRE agent that self-improves via Darwin eval loop"
authors = ["Srikar <achantas@gmail.com>"]
readme = "README.md"
packages = [{ include = "agents" }, { include = "darwin" }, { include = "api" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.0"
google-genai = ">=1.0.0"
pymongo = "^4.7.0"
fastapi = "^0.111.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
python-dotenv = "^1.0.0"
pydantic = "^2.7.0"
httpx = "^0.27.0"
arize-otel = ">=0.3.0"
arize-ax-cli = ">=0.25.0"
openinference-instrumentation-openai = ">=0.1.0"
opentelemetry-sdk = ">=1.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
mongomock = "^4.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: marks tests that hit real external services (deselect with -m 'not integration')",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
